--- a/day_04/index.html
+++ b/day_04/index.html
@@ -41,12 +41,131 @@
 			<h6>An Iron Yard Academy project</h6>
 		</div>
 
+		<article>
+			<div class="articleheadline">
+				<h2>A FANTASTIC ENGAGING HEADLINE GOES HERE</h2>
+			</div>
+			
+			<div class="articledate">	
+				<img src="images/author.jpg" alt="">
+				<p>On Monday Oct. 7th 9:22pm</p>	
+			</div>
+
+			<div class="articlecontent">
+				<p>Locavore ea meggings, deep v gentrify bespoke butcher yr typewriter. Nisi sunt 8-bit craft beer, leggings deep v biodiesel Williamsburg. Actually hashtag art party nesciunt squid pour-over. Kitsch Vice cray, Marfa brunch fingerstache officia Schlitz Blue Bottle cillum. Mlkshk 8-bit aliquip fingerstache sunt.
+
+				Distillery ad sriracha, synth wolf street art brunch excepteur consectetur art party irony fugiat. Duis chia yr, pour-over Portland velit High Life non aesthetic fugiat tattooed shabby chic mixtape.</p>
+				<blockquote>WOAH, THATS RADICAL</blockquote>
+				<p>Swag nisi mixtape cray, non hashtag blog tote bag dolor bitters before they sold out ea dolore. Raw denim mixtape drinking vinegar, Vice 3 wolf moon authentic officia aute id. Keffiyeh yr retro, salvia do <a href="#">aliqua (rollover)</a> leggings selvage narwhal farm-to-table dolor Tonx DIY photo booth. Bitters gastropub non 3 wolf moon Blue Bottle organic, cray aesthetic jean shorts velit umami. Mlkshk roof party cardigan, farm-to-table aute plaid wolf master cleanse. Thundercats tattooed lo-fi culpa, mollit Pinterest American Apparel. 3 wolf moon VHS hella, Tonx beard chambray sustainable jean shorts synth mlkshk fugiat excepteur banh mi eu whatever.</p>
+
+				<p>Vinyl sartorial culpa bespoke labore, ethical readymade tofu selfies ut locavore commodo mumblecore paleo typewriter. Mumblecore selfies nostrud, asymmetrical 90's fanny pack est Blue Bottle ethnic blog. Narwhal Shoreditch fixie tofu, nisi before they sold out mlkshk flannel. Banjo 90's skateboard farm-to-table ut, occaecat deserunt. Irony culpa aliqua placeat YOLO twee. Wayfarers sed delectus whatever, adipisicing Thundercats bitters cliche dolore sunt street art laborum incididunt. Echo Park anim 8-bit, narwhal sustainable +1 iPhone assumenda ethical cornhole mustache roof party proident aesthetic hoodie.</p>	
+			</div>
+
+			<div class="articleoptions">
+				<div class="readcomments">
+					<div class="icon1">
+						<img src="images/comments-icon.png" alt="">
+					</div>
+					<div class="icon-description1">
+						<p>Read Comments</p>
+					</div>
+				</div>
+				<div class="readlater">
+					<div class="icon2">
+						<img src="images/read-later-icon.png" alt="">
+					</div>
+					<div class="icon-description2">
+						<p>Read Later</p>
+					</div>
+				</div>
+				<div class="readlater">
+					<div class="icon3">
+						<img src="images/share-icon.png" alt="">
+					</div>
+					<div class="icon-description3">
+						<p>Share This Post</p>
+					</div>
+				</div>
+			</div>
+
+
+		</article>
+
+		<aside>
+			<div class="asideportrait">
+				<img src="images/author.jpg" alt="">
+			</div>
+			<div class="asidelinks">
+				<ul class="asidesocial">
+					<li><h3>Instagram</h3></li>
+					<li><h3>Facebook</h3></li>
+					<li><h3>Twitter</h3</li>
+				</ul>
+			</div>
+			<div class="asidead">
+				<img src="images/paddle.jpg" alt="">
+			</div>
+			<div class="sidebar">
+				<p>About this Ad</p>
+			</div>
+			<div class="sidebarheading">
+				<h2>SIDEBAR SECTION HEADING</h2>
+				<p>Distillery ad sriracha, synth wolf street art brunch excepteur consectetur art party irony fugiat. Duis chia yr, pour-over Portland velit High Life non aesthetic fugiat tattooed shabby chic mixtape. ethical cornhole mustache roof party provident aesthetic</p>
+			</div>
+
+		</aside>
+
+
+
+
+
+
+
+
+
+
+<!-- 		<div class="articleoptions">
+			<div class="readcomments">
+				<div class="icon1">
+					<img src="images/comments-icon.png" alt="">
+				</div>
+				<div class="icon-description1">
+					<p>Read Comments</p>
+				</div>
+			</div>
+			<div class="readlater">
+				<div class="icon2">
+					<img src="images/read-later-icon.png" alt="">
+				</div>
+				<div class="icon-description2">
+					<p>Read Later</p>
+				</div>
+			</div>
+			<div class="readlater">
+				<div class="icon3">
+					<img src="images/share-icon.png" alt="">
+				</div>
+				<div class="icon-description3">
+					<p>Share This Post</p>
+				</div>
+			</div>
+
+		</div> -->
+
+		<div class="postheadline">
+			<h2>MOST POPULAR POSTS</h2>
+		</div>
+
+
+
+
 		<div class="popularposts">
 			<div class="post1"></div>
 			<div class="post2"></div>
 			<div class="post3"></div>
 			<div class="post4"></div>
 		</div>
+
 
 
 		<footer>
