--- a/day_04/index.html
+++ b/day_04/index.html
@@ -124,33 +124,7 @@
 
 
 
-<!-- 		<div class="articleoptions">
-			<div class="readcomments">
-				<div class="icon1">
-					<img src="images/comments-icon.png" alt="">
-				</div>
-				<div class="icon-description1">
-					<p>Read Comments</p>
-				</div>
-			</div>
-			<div class="readlater">
-				<div class="icon2">
-					<img src="images/read-later-icon.png" alt="">
-				</div>
-				<div class="icon-description2">
-					<p>Read Later</p>
-				</div>
-			</div>
-			<div class="readlater">
-				<div class="icon3">
-					<img src="images/share-icon.png" alt="">
-				</div>
-				<div class="icon-description3">
-					<p>Share This Post</p>
-				</div>
-			</div>
 
-		</div> -->
 
 		<div class="postheadline">
 			<h2>MOST POPULAR POSTS</h2>
@@ -160,10 +134,18 @@
 
 
 		<div class="popularposts">
-			<div class="post1"></div>
-			<div class="post2"></div>
-			<div class="post3"></div>
-			<div class="post4"></div>
+			<div class="post1">
+				<h2>SURFING STORIES</h2>
+			</div>
+			<div class="post2">
+				<h2>TOP SURF BREWS</h2>
+			</div>
+			<div class="post3">
+				<h2>ZACK LOVES<br>SURFING</h2>
+			</div>
+			<div class="post4">
+				<h2>SURF AND SHOTS</h2>
+			</div>
 		</div>
 
 
