--- a/day_06/index.html
+++ b/day_06/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="assets/stylesheets/main.css">
+	<link rel="stylesheet" href="https://www.google.com/fonts#UsePlace:use/Collection:Lato:100,300,400">
 	<title>Styles Conference</title>
 </head>
 <body>
@@ -14,9 +15,9 @@
 	<a href="index.html">Styles <br> Conference</a>
 	</h1>
 
-	<h3>August 24&ndash;26th &mdash; Chicago, IL</h3>
+	<h3 class="tagline">August 24&ndash;26th &mdash; Chicago, IL</h3>
 
-	<nav>
+	<nav class="nav primary-nav">
 	<a href="index.html">Home</a>
 	<a href="speakers.html">Speakers</a>
 	<a href="schedule.html">Schedule</a>
@@ -41,7 +42,7 @@
   
   <!-- Speakers -->
   
-  <section class="col-1-3">
+  <section class="teaser col-1-3">
     <a href="speakers.html">
       <h5>Speakers</h5>
       <h3>World-Class Speakers</h3>
@@ -51,7 +52,7 @@
   
   Schedule
   
-  --><section class="col-1-3">
+  --><section class="teaser col-1-3">
     <a href="schedule.html">
       <h5>Schedule</h5>
       <h3>Three Inspiring Days</h3>
@@ -61,7 +62,7 @@
   
   Venue
   
-  --><section class="col-1-3">
+  --><section class="teaser col-1-3">
     <a href="venue.html">
       <h5>Venue</h5>
       <h3>The Chicago Theatre</h3>
@@ -73,7 +74,7 @@
 
 <footer class="primary-footer container group">
 	<small>&copy; Styles Conference</small>
-	<nav>
+	<nav class="nav">
 	<a href="index.html">Home</a>
 	<a href="speakers.html">Speakers</a>
 	<a href="schedule.html">Schedule</a>
