Initial commit for Day 11 - need to check in more

--- a/day_09b/index.html
+++ b/day_09b/index.html
@@ -36,7 +36,7 @@
 			<h6>An Iron Yard Academy project</h6>
 		</div>
 
-		<article>
+		<section>
 			<div class="articleheadline">
 				<h2>A FANTASTIC ENGAGING HEADLINE GOES HERE</h2>
 			</div>
@@ -84,7 +84,7 @@
 			</div>
 
 
-		</article>
+		</section>
 
 		<aside>
 			<div class="asideportrait">
