--- a/day_10/index.html
+++ b/day_10/index.html
@@ -71,11 +71,204 @@
 			</div>
 		</section>
 
-		<section>
+		<section class="bottomcontainer">
+
+			<section class="leftcontainer">
+				<div class="profileinfo">
+					<h4>The Iron Yard</h4>
+					<p class="profilehandle greytext14">@TheIronYard</p>
+					<p  class="profiledesc blacktext14">Learn to code, life is too short for the wrong career. The top intensive code school in the country</p>
+					<div class="profilebackground">
+						<ul class="profilecountry">
+							<li><img src="assets/icons/i-_0008_location.png" alt=""></li>
+							<li><p class="blacktext14">National</p></li>
+						</ul>
+						<ul class="profilelink">
+							<li><img src="assets/icons/i-_0011_chains.png" alt=""></li>
+							<li><p class="bluetext14">theironyard.com</p></li>
+						</ul>
+						<ul class="profilejoin">
+							<li><img src="assets/icons/i-_0000_clock.png" alt=""></li>
+							<li><p class="blacktext14">Joined May 2012</p></li>
+						</ul>
+
+					</div>
+				</div>
+
+
+
+				<div class="profilephotos">
+					<div class="photocount">
+						<ul>
+							<li><img src="assets/icons/i-_0006_camera.png" alt=""></li>
+							<li><p class="bluetext14">278 Photos and videos</p></li>
+						</ul>
+					</div>
+					<div class="photogalleries">
+						<img src="assets/images/thumb-5.jpg" alt="">
+						<img src="assets/images/thumb-4.jpg" alt="">
+						<img src="assets/images/thumb-3.jpg" alt="">
+						<img src="assets/images/thumb-2.jpg" alt="">
+						<img src="assets/images/thumb-1.jpg" alt="">
+						<img src="assets/images/thumb-6.jpg" alt="">
+					</div>
+					
+				</div>
+
+<!-- This section contains the join twitter widget -->
+
+				<div class="joincallout">
+					<div class="joininfo">
+						<div class="jointitle">
+							<h3>New to Twitter?</h3>
+						</div>
+						<div class="jointexts greytext14">
+							<p>Sign up now to get your<br> own personalized timeline!</p>
+						</div>
+						<div class="joinbutton">
+							<div class="signup-text">
+							<p class="whitetext16">Sign up</p>
+							</div>
+						</div>			
+					</div>
+				</div>
+
+<!-- This section contains the suggestions container  -->
+				<div class="peoplesuggestions">
+					<div class="suggest-title">
+						<h4 class="greytext18">You may also like<h4>
+						<p class="bluetext12">Refresh</p>
+					</div>
+					<div class="suggest-person">
+						<ul class="suggestperson1">
+							<li class="suggestportrait"><img src="assets/images/peter.png" alt=""></li>
+							<li class="suggestname blacktext13bold">Peter Barth</li>
+							<li class="suggestprofile greytext13">@peterbarth</li>
+						</ul>
+						<ul  class="suggestperson2">
+							<li class="suggestportrait"><img src="assets/images/eric.jpeg" alt=""></li>
+							<li class="suggestname blacktext13bold">ericdodds</li>
+							<li class="suggestprofile greytext13">@ericdodds</li>
+						</ul>
+						<ul  class="suggestperson3">
+							<li class="suggestportrait"><img src="assets/images/marty.jpg" alt=""></li>
+							<li class="suggestname blacktext13bold">Marty Bauer</li>
+							<li class="suggestprofile greytext13">@bauermarty</li>
+						</ul>
+						<ul  class="suggestperson4">
+							<li class="suggestportrait"><img src="assets/images/refresh.jpg" alt=""></li>
+							<li class="suggestname blacktext13bold">Refresh Charleston</li>
+							<li class="suggestprofile greytext13">@RefreshCHS</li>
+						</ul>
+						<ul  class="suggestperson5">
+							<li class="suggestportrait"><img src="assets/images/sarah.png" alt=""></li>
+							<li class="suggestname blacktext13bold">Sarah Lodato</li>
+							<li class="suggestprofile greytext13">@sarahbethlodato</li>
+						</ul>						
+					</div>
+				</div>
+
+
+
+<!-- This section contains the trends container -->
+
+				<div class="trends-container">
+					<div class="trends-title">
+						<h4 class="greytext18">Trends<h4>
+						<p class="bluetext12">Change</p>	
+					</div>
+					<div class="trends-promotion">
+						<p class="bluetext12">#EntourageMovie</p>
+						<ul>
+							<li><img src="assets/icons/i-_0002_promoted.png" alt=""></li>
+							<li class="greytext12"><p>Promoted by Entourage Movie</p></li>
+						</ul>
+					</div>
+					<div class="trends-list">
+						<p class="bluetext13">#NationalDonutDay</p>
+						<p class="bluetext13">#PSYYnaAtAngelo</p>
+						<p class="bluetext13">#WorldEnvironmentDay</p>
+						<p class="bluetext13">#AFLFreoTigers</p>
+						<p class="bluetext13">Jerry Collins</p>
+						<p class="bluetext13">#bringbackmark</p>
+						<p class="bluetext13">Farrakhan</p>
+						<p class="bluetext13">Zayn Dinabu Malik</p>
+						<p class="bluetext13">Irina Shayk</p>
+						<p class="bluetext13">Arabian Queen</p>
+					</div>
+					<div class="div"></div>
+				</div>
+			</section>
+
+			<section class="rightcontainer">
+					<div class="tweet-menu">
+					<!-- consider breaking these up in css to add additional padding for each element -->
+						<p class="blacktext18bold">Tweets</p>
+						<p class="bluetext18">Tweets &#38;replies</p>
+						<p class="bluetext18">Photos &#38;videos </p>
+
+					</div>
+					<div class="tweet-menu-line"></div>
+
+					<section class="tweetcontainer">
+						<div class="topsection-tweetstatus">
+							<ul>
+								<li><img src="" alt=""></li>
+								<li><p class="tweetstatus">Pinned Tweet</p></li>
+						</div>
+						<div class="leftsection-tweetlogo">
+							<img src="" alt="">
+						</div>
+						<div class="rightsection-tweetcontainer">
+							<div class="tweet-origin">
+								<ul>
+									<li>The Iron Yard</li>
+									<li>@TheIronYard</li>
+									<li>Aug 12</li>
+								</ul>
+							</div>
+							<div class="tweet-bigcomment">
+								<p>How Far We've Come:</p>
+							</div>
+							<div class="tweet-biglink">
+								<p>blog.theironyard.com/post/945325051...</p>
+							</div>
+							<div class="tweet-articlelogo">
+								<ul>
+									<li class="article-logo"><img src="" alt=""></li>
+									<li class="article-title">The Iron Yard</li>
+								</ul>
+							</div>
+							<div class="tweet-articletitle">
+								<p>How Far We've Come</p>
+							</div>
+							<div class="tweet-articlemain">
+								<p>By John Saddington, People &#38; Ops To look at the above image is mind-blowing (and that's just one of the many campuses that we have around the country)! To think that only a few months ago...</p>
+							</div>
+							<div class="tweet-articleimage">
+							</div>
+							<div class="tweet-articlelink">
+								<p>View on web</p>
+							</div>
+							<div class="tweet-actionbar">
+								<ul>
+									<li class="tweetreply-img"><img src="" alt=""></li>
+									<li class="tweetreplycount"></li>
+									<li class="tweetretweet-img"><img src="" alt=""></li>
+									<li class="tweetretweetcount"></li>
+									<li class="tweetstar-img"><img src="" alt=""></li>
+									<li class="tweetstarcount"></li>
+									<li class="tweetmoreoptions-img"></li>
+								</ul>
+							</div>
+						</div>
+					</section>
+
+			</section>
+
+
 		</section>
 
-		<section>
-		</section>
 		
 
 
